# task-runner-launcher

./: .bazelrc  .gitignore  .golangci.yml  BAZEL_MIGRATION_PLAN.md  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  go.mod  go.sum
.github/workflows/: checks.yml  release.yml
cmd/launcher/: BUILD.bazel  main.go
docs/: development.md  environment.md  lifecycle.md  release.md  setup.md
internal/auth/: handshake.go  token_exchange.go
internal/commands/: BUILD.bazel  launch.go
internal/config/: BUILD.bazel  config.go  config_test.go  lookuper.go  lookuper_test.go
internal/env/: BUILD.bazel  env.go  env_test.go
internal/errorreporting/: BUILD.bazel  sentry.go  sentry_test.go
internal/errs/: BUILD.bazel  errs.go
internal/http/: BUILD.bazel  check_runner_health.go  check_until_broker_ready.go  check_until_broker_ready_test.go  check_until_n8n_ready_test.go  fetch_grant_token_test.go  healthcheck_server.go  healthcheck_server_test.go  manage_runner_health.go  manage_runner_health_test.go  monitor_runner_health.go  monitor_runner_health_test.go  retry.go  wait_for_n8n.go
internal/launcherr/: launcherr.go
internal/logs/: BUILD.bazel  logger.go  logger_test.go  runner_writers.go  runner_writers_test.go
internal/reporting/: sentry.go  sentry_test.go
internal/retry/: BUILD.bazel  retry.go
internal/sentry/: sentry.go  sentry_test.go
internal/ws/: BUILD.bazel  handshake.go  handshake_test.go
src/: main.rs
tools/gocov/: BUILD.bazel  main.sh
tools/gofmt/: BUILD.bazel  main.go
tools/golint/: BUILD.bazel  main.go
