module(
    name = "task_runner_launcher",
    version = "1.0.0",
)

# Bazel dependencies
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Use all dependencies from go.mod
use_repo(
    go_deps,
    "com_github_getsentry_sentry_go",
    "com_github_gorilla_websocket",
    "com_github_sethvargo_go_envconfig",
    "com_github_stretchr_testify",
)
