load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "golint_lib",
    srcs = ["main.go"],
    importpath = "task-runner-launcher/tools/golint",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "golint",
    embed = [":golint_lib"],
    visibility = ["//visibility:public"],
)
